# air-anthropic-trust

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
air_anthropic_trust/: __init__.py  audit_ledger.py  config.py  consent_gate.py  data_vault.py  errors.py  hooks.py  injection_detector.py
tests/: test_hooks.py
