[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-anthropic-trust"
version = "0.1.0"
description = "AIR Trust Layer for Anthropic Claude Agent SDK — audit trails, data tokenization, consent gates, and injection detection for EU AI Act compliance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AIR Blackbox", email = "contact@airblackbox.ai"}
]
keywords = ["anthropic", "claude", "agent", "trust", "compliance", "ai-act", "audit", "data-vault"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
]

[project.urls]
Homepage = "https://github.com/airblackbox/air-anthropic-trust"
Documentation = "https://airblackbox.ai"
Repository = "https://github.com/airblackbox/air-anthropic-trust"
Issues = "https://github.com/airblackbox/air-anthropic-trust/issues"

[tool.setuptools]
packages = ["air_anthropic_trust"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
